--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@
 
 .font5vmin {
   font-size: 3vmin;
-  position: absolute;
+  /* position: absolute;
   top: 93vh;
-  left: 10vw;
+  left: 10vw; */
 }
 
 @keyframes playerWindup {
@@ -896,7 +896,7 @@
 
 .remove-pile {
   width: 15vw;
-  height: 4vh;
+  height: 4.1vh;
   color: white;
   background-color: brown;
   border: 1px dashed red;
@@ -928,12 +928,24 @@
 
 }
 
+#handContainer2 {
+  width: 30vw;
+  height: 55vh;
+  background-color: #0500332a;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* justify-content: center; */
+  align-content: start;
+  /*background: linear-gradient(45deg, rgba(32, 78, 70, 0.6) 0%, rgba(255,175,70,0.23) 35%, rgba(0,212,255,0.08) 100%); */
+}
+
 .card {
   background: linear-gradient(90deg, rgb(255, 238, 208),rgb(230, 171, 94), rgb(255, 200, 127), rgb(243, 133, 23));
   margin: 0.4vmax;
   width: 13vw;
   height: 10vh;
-  float: left;
+  /* float: left; */
   justify-content: center;
   position: relative;
 }
@@ -954,17 +966,7 @@
 
 
 
-#handContainer2 {
-  width: 30vw;
-  height: 55vh;
-  background-color: #0500332a;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  /* justify-content: center; */
-  align-content: start;
-  /*background: linear-gradient(45deg, rgba(32, 78, 70, 0.6) 0%, rgba(255,175,70,0.23) 35%, rgba(0,212,255,0.08) 100%); */
-}
+
 
 /* https://codersblock.com/blog/creating-glow-effects-with-css/ 
 https://blog.logrocket.com/css-style-button-accessibility/*/
@@ -1692,6 +1694,13 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   color: rgb(153, 5, 5);
 }
 
+#discardPile {
+  position: absolute;
+  left: 2vw;
+  top: 90vh;
+
+}
+
 
 
 
@@ -1731,7 +1740,7 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 
 .discarding-0, .discarding-1, .discarding-2, .discarding-3, .discarding-4,
 .discarding-5, .discarding-6, .discarding-7 {
-  animation-duration: 0.4s;
+  animation-duration: 4s;
   animation-timing-function: ease-out;
   animation-direction: forwards;
 }
@@ -1769,55 +1778,60 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 
 
 
-/* .play-discarding-0, .play-discarding-1, .play-discarding-2, .play-discarding-3, .play-discarding-4,
+.play-discarding-0, .play-discarding-1, .play-discarding-2, .play-discarding-3, .play-discarding-4,
 .play-discarding-5, .play-discarding-6, .play-discarding-7 {
-  animation-duration: 0.4s;
+  animation-duration: 4s;
   animation-timing-function: ease-out;
   animation-direction: forwards;
 }
 .play-discarding-0 {
-  animation-name: discard-0;
+  animation-name: play-discard-0;
 }
 
 .play-discarding-1 {
-  animation-name: discard-1;
+  animation-name: play-discard-1;
 }
 
 .play-discarding-2 {
-  animation-name: discard-2;
+  animation-name: play-discard-2;
 }
 
 .play-discarding-3 {
-  animation-name: discard-3;
+  animation-name: play-discard-3;
 }
 
 .play-discarding-4 {
-  animation-name: discard-4;
+  animation-name: play-discard-4;
 }
 .play-discarding-5 {
-  animation-name: discard-5;
+  animation-name: play-discard-5;
 }
 .play-discarding-6 {
-  animation-name: discard-6;
+  animation-name: play-discard-6;
 }
 .play-discarding-7 {
-  animation-name: discard-7;
-} */
+  animation-name: play-discard-7;
+}
+
+:root {
+  --card-margin-left: 4vw;
+}
 
 @keyframes discard-0 {
   0% { transform: translateX(0) translateY(0);
     overflow: hidden;}
-  70% {transform: translateX(18vw) translateY(-5vh);
-      margin-right: 4vw;
-      width: 6vw;
-      height: 4vh;
+  70% {transform: translateX(1vw) translateY(45.5vh);
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
       overflow: hidden;
+      opacity: 0.8;
   }
   100% { 
-    transform: translateX(18vw) translateY(-5vh);
-    margin-right: 4vw;
-    width: 6vw;
-    height: 4vh;
+    transform: translateX(1vw) translateY(45.5vh);
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
     opacity: 0;
     overflow: hidden;
   }
@@ -1826,17 +1840,18 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 @keyframes discard-1 {
   0% { transform: translateX(0) translateY(0);
     overflow: hidden;}
-  70% {transform: translateX(9vw) translateY(-5vh);
-      margin-right: 4vw;
-      width: 6vw;
-      height: 4vh;
+  70% {transform: translateX(-8.5vw) translateY(45.5vh);
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
       overflow: hidden;
+      opacity: 0.8;
   }
   100% { 
-    transform: translateX(9vw) translateY(-5vh);
-    margin-right: 4vw;
-    width: 6vw;
-    height: 4vh;
+    transform: translateX(-8.5vw) translateY(45.5vh);
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
     opacity: 0;
     overflow: hidden;
   }
@@ -1844,18 +1859,27 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 
 @keyframes discard-2 {
   0% { transform: translateX(0) translateY(0);
-    overflow: hidden;}
-  70% {transform: translateX(18vw) translateY(-12vh);
-      margin-right: 4vw;
-      width: 6vw;
-      height: 4vh;
+    overflow: hidden;
+    position: absolute;
+    top: 60vh;
+    left: 1vw;
+    }
+  70% {position: absolute;
+      top: 90vh;
+      left: 2vw;
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
       overflow: hidden;
+      opacity: 0.8;
   }
   100% { 
-    transform: translateX(18vw) translateY(-12vh);
-    margin-right: 4vw;
-    width: 6vw;
-    height: 4vh;
+    position: absolute;
+      top: 90vh;
+      left: 2vw;
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
     opacity: 0;
     overflow: hidden;
   }
@@ -1863,18 +1887,26 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 
 @keyframes discard-3 {
   0% { transform: translateX(0) translateY(0);
-    overflow: hidden;}
-  70% {transform: translateX(9vw) translateY(-12vh);
-      margin-right: 4vw;
-      width: 6vw;
-      height: 4vh;
+    overflow: hidden;
+    position: absolute;
+    top: 60vh;
+    left: 15vw;}
+  70% {position: absolute;
+    top: 90vh;
+    left: 2vw;
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
       overflow: hidden;
+      opacity: 0.8;
   }
   100% { 
-    transform: translateX(9vw) translateY(-12vh);
-    margin-right: 4vw;
-    width: 6vw;
-    height: 4vh;
+    position: absolute;
+      top: 90vh;
+      left: 2vw;
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
     opacity: 0;
     overflow: hidden;
   }
@@ -1883,17 +1915,18 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 @keyframes discard-4 {
   0% { transform: translateX(0) translateY(0);
     overflow: hidden;}
-  70% {transform: translateX(18vw) translateY(-18vh);
-      margin-right: 4vw;
-      width: 6vw;
-      height: 4vh;
+  70% {transform: translateX(0.5vw) translateY(15vh);
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
       overflow: hidden;
+      opacity: 0.8;
   }
   100% { 
-    transform: translateX(18vw) translateY(-18vh);
-    margin-right: 4vw;
-    width: 6vw;
-    height: 4vh;
+    transform: translateX(0.5vw) translateY(15vh);
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
     opacity: 0;
     overflow: hidden;
   }
@@ -1902,17 +1935,140 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 @keyframes discard-5 {
   0% { transform: translateX(0) translateY(0);
     overflow: hidden;}
-  70% {transform: translateX(9vw) translateY(-18vh);
-      margin-right: 4vw;
-      width: 6vw;
-      height: 4vh;
+  70% {transform: translateX(-9vw) translateY(15vh);
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
       overflow: hidden;
+      opacity: 0.8;
   }
   100% { 
-    transform: translateX(9vw) translateY(-18vh);
-    margin-right: 4vw;
-    width: 6vw;
-    height: 4vh;
+    transform: translateX(-9vw) translateY(15vh);
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
+    opacity: 0;
+    overflow: hidden;
+  }
+}
+
+
+
+@keyframes play-discard-0 {
+  0% { transform: translateX(0) translateY(0);
+    overflow: hidden;}
+  70% {transform: translateX(0.5vw) translateY(45vh);
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
+      overflow: hidden;
+      opacity: 0.8;
+  }
+  100% { 
+    transform: translateX(0.5vw) translateY(45vh);
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
+    opacity: 0;
+    overflow: hidden;
+  }
+}
+
+@keyframes play-discard-1 {
+  0% { transform: translateX(0) translateY(0);
+    overflow: hidden;}
+  70% {transform: translateX(-13vw) translateY(45vh);
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
+      overflow: hidden;
+      opacity: 0.8;
+  }
+  100% { 
+    transform: translateX(-13vw) translateY(45vh);
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
+    opacity: 0;
+    overflow: hidden;
+  }
+}
+
+@keyframes play-discard-2 {
+  0% { transform: translateX(0) translateY(0);
+    overflow: hidden;}
+  70% {transform: translateX(0.5vw) translateY(33vh);
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
+      overflow: hidden;
+      opacity: 0.8;
+  }
+  100% { 
+    transform: translateX(0.5vw) translateY(33vh);
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
+    opacity: 0;
+    overflow: hidden;
+  }
+}
+
+@keyframes play-discard-3 {
+  0% { transform: translateX(0) translateY(0);
+    overflow: hidden;}
+  70% {transform: translateX(-13vw) translateY(33vh);
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
+      overflow: hidden;
+      opacity: 0.8;
+  }
+  100% { 
+    transform: translateX(-13vw) translateY(33vh);
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
+    opacity: 0;
+    overflow: hidden;
+  }
+}
+
+@keyframes play-discard-4 {
+  0% { transform: translateX(0) translateY(0);
+    overflow: hidden;}
+  70% {transform: translateX(0.5vw) translateY(20vh);
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
+      overflow: hidden;
+      opacity: 0.8;
+  }
+  100% { 
+    transform: translateX(0.5vw) translateY(20vh);
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
+    opacity: 0;
+    overflow: hidden;
+  }
+}
+
+@keyframes play-discard-5 {
+  0% { transform: translateX(0) translateY(0);
+    overflow: hidden;}
+  70% {transform: translateX(-13vw) translateY(20vh);
+      margin-right: var(--card-margin-left);
+      width: 8vmin;
+      height: 4vmin;
+      overflow: hidden;
+      opacity: 0.8;
+  }
+  100% { 
+    transform: translateX(-13vw) translateY(20vh);
+    margin-right: var(--card-margin-left);
+    width: 8vmin;
+    height: 4vmin;
     opacity: 0;
     overflow: hidden;
   }
