--- a/style.css
+++ b/style.css
@@ -540,16 +540,56 @@
   display: none;
 }
 
+
 .move {
   font-size: 1.9vmin;
-  border: 1px solid rgba(191, 191, 191, 0.632);
+  border: 1px solid white;
   color: rgba(191, 191, 191, 0.632);
   border-radius: 0.6vw;
   margin-top: 0.8vmin;
   margin-bottom: 0.8vmin;
   background-position: 0% 0%;
-  transition: background-color 0.25s;
+  transition: all 0.3s linear;
 }
+
+
+.chosen {
+  border: 4px dashed rgb(255, 254, 253);
+  color: white;
+  font-size: 2.5vmin;
+  transition: all 0.2s;
+}
+
+.move-div-fire {
+  background: linear-gradient(to right, rgba(255, 52, 52, 0.916) 50%,  rgba(255, 52, 52, 0) 50%) ;
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.3s linear;
+}
+
+.move-div-water {
+  background: linear-gradient(to right, rgba(52, 62, 255, 0.916) 50%,  rgba(255, 52, 52, 0) 50%) ;
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.3s linear;
+}
+
+.move-div-air {
+  background: linear-gradient(to right, rgba(193, 193, 188),  rgba(255, 52, 52, 0) 50%) ;
+  background-size: 200% 100%;
+  background-position: right bottom;
+  color: rgb(11, 11, 17);
+  transition: all 0.3s linear;
+}
+
+.move-div-earth {
+  background: linear-gradient(to right, rgba(5, 100, 0, 0.916) 50%,  rgba(255, 52, 52, 0) 50%) ;
+  background-size: 200% 100%;
+  background-position: right bottom;
+  transition: all 0.3s linear;
+}
+
+
 
 .power {
   font-size: 2vmin;
@@ -558,56 +598,28 @@
   border-radius: 0.6vw;
 }
 
+
+
 .fake-move-div {
-  border: 1px solid;
   padding: 0.05vh 0.05vw;
   border-radius: 0.6vw;
   height: 2.2vh;
   margin: 1.2vmin;
 }
 
-.chosen {
-  border: 4px dashed rgb(255, 254, 253);
-  color: white;
-  font-size: 2.5vmin;
-}
 
-.energy-filled-fire {
-  background-color: rgba(255, 52, 52, 0.916);
-  border: 1px solid white;
-  background-position: 0% 100%;
-}
-
-.energy-filled-water {
-  background-color: rgba(52, 62, 255, 0.916);
-  border: 1px solid white;
-  background-position: 0% 100%;
-}
-
-.energy-filled-air {
-  background-color: rgba(193, 193, 188, 0.916);
-  border: 1px solid white;
-  background-position: 0% 100%;
-  color:rgb(11, 11, 17);
-}
-.energy-filled-earth {
-  background-color: rgba(5, 100, 0, 0.916);
-  border: 1px solid white;
-  background-position: 0% 100%;
+.energy-filled {
+  background-position: left bottom;
 }
 
 
 
-#opponents .not-chosen {
-  color: rgba(199, 199, 199, 0.702);
-  font-size: 1.6vmin;
-  border: 1px solid white;
-}
-#opponents .not-chosen-air {
-  color: rgba(73, 73, 73, 0.702);
-  font-size: 1.7vmin;
-  border: 1px solid white;
-}
+
+
+
+
+
+
 
 .monster {
   border: 0.2px solid red;
@@ -971,7 +983,7 @@
 /* https://codersblock.com/blog/creating-glow-effects-with-css/ 
 https://blog.logrocket.com/css-style-button-accessibility/*/
 
-.move h3, .move p, .card h3, .card p, .pile p, .card-pile-card h3, #playerStats h4, .power h3, .power p {
+.move-div-fire h3, .move h3, .move p, .move-div-fire p, .card h3, .card p, .pile p, .card-pile-card h3, #playerStats h4, .power h3, .power p {
   margin-block-start: 0.01em;
   margin-block-end: 0.01em;
   margin-left: 0.1em;
