--- a/style.css
+++ b/style.css
@@ -675,7 +675,7 @@
   clip-path: polygon(-41% 0,50% 91%, 141% 0);
   color: white;
   text-align: center;
-  height: -3vh;
+  margin-top: 3vh;
   flex-grow: 0.1;
   font-size: 1.5vw;
   flex-shrink: 2;
@@ -801,6 +801,8 @@
 #opponents .avatar {
   width: 10vw;
   height: 10vw;
+  margin-bottom: 1vh;
+  margin-top: 3vh;
 }
 
 .avatar {
