--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 #app {
   display: flex;
   flex-direction: column;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .flex {
@@ -446,6 +447,26 @@
   text-align: center;
   font-size: 3vw;
 }
+
+#backstepdamage, #blockkeep {
+  position: relative;
+}
+
+#backstepdamagepopup, #blockkeeppopup {
+    display: none;
+    position: absolute;
+    top: 6%;
+    left: 22%;
+    z-index: 5;
+    width: 20vw;
+    height: 5vh;
+    font-size: 2vmin;
+    background-color: #f9f9f9;
+    color: black;
+    border: 1px solid #ccc;
+}
+
+
 
 .bg-image {
   height: 100%;
@@ -1025,8 +1046,8 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 }
 
 .card p{
-  font-size: 1.8vmin;
-  line-height: 1.9vmin;
+  font-size: 1.65vmin;
+  line-height: 1.7vmin;
   padding: 0;
   justify-content: center;
 }
@@ -1191,25 +1212,24 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 #backstepdamage {
   background-image: url(img/icons/status/backstepdamage.png);
   background-size: contain;
-  height: 2.2vw;
-  width: 2.2vw;
+  height: 2.5vw;
+  width: 2.5vw;
   /* filter: invert(92%) sepia(0%) saturate(933%) hue-rotate(350deg) brightness(98%) contrast(88%); */
 }
 
 #cantselfdamage {
   background-image: url(img/icons/status/cantselfdamage.png);
   background-size: contain;
-  height: 2.2vw;
-  width: 2.2vw;
-  /* filter: invert(92%) sepia(0%) saturate(933%) hue-rotate(350deg) brightness(98%) contrast(88%); */
+  height: 2.5vw;
+  width: 2.5vw;
+  filter: invert(58%) sepia(60%) saturate(69%) hue-rotate(185deg) brightness(104%) contrast(105%);
 }
 
 #blockkeep {
-  background-image: url(img/icons/status/doubleendofturn.png);
+  background-image: url(img/icons/status/blockkeep.png);
   background-size: contain;
-  height: 3vw;
-  width: 3vw;
-  filter: invert(92%) sepia(0%) saturate(933%) hue-rotate(350deg) brightness(98%) contrast(88%);
+  height: 2.5vw;
+  width: 2.5vw;
 }
 
 
